--- a/client/src/styles/note.css
+++ b/client/src/styles/note.css
@@ -80,10 +80,6 @@
   min-height: 100px;
   margin-left: -0.8rem;
   padding: 0.1rem 1.25rem 0.2rem 2rem;
-  /* border-left: 0.5px solid transparent;
-  border-right: 0.5px solid transparent;
-  border-top: 0.5px solid rgba(0, 0, 0, 0.8);
-  border-bottom: 0.5px solid rgba(0, 0, 0, 0.8); */
   margin-bottom: 4px;
   background-color: rgb(249, 249, 249);
 }
